--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='News Aggregator'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=news_aggregator
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=news-aggregator
+DB_USERNAME=tester
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
